Fixed page height on mobile for sure

--- a/src/app.css
+++ b/src/app.css
@@ -79,7 +79,6 @@ body {
 }
 
 body>div {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
